--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -1021,7 +1021,7 @@
             <item row="4" column="1">
              <widget class="QLabel" name="labelAmountRounds">
               <property name="text">
-               <string>0 ARO / 0 Rounds</string>
+               <string>0 ARION / 0 Rounds</string>
               </property>
              </widget>
             </item>
