--- a/src/qt/forms/darksendconfig.ui
+++ b/src/qt/forms/darksendconfig.ui
@@ -75,7 +75,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Use 2 separate masternodes to mix funds up to 1000 TX</string>
+    <string>Use 2 separate masternodes to mix funds up to 1000 ARION</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
@@ -88,7 +88,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Use 8 separate masternodes to mix funds up to 1000 TX</string>
+    <string>Use 8 separate masternodes to mix funds up to 1000 ARION</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
@@ -114,7 +114,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>This option is the quickest and will cost about ~0.025 ARION to anonymize 1000 TX</string>
+    <string>This option is the quickest and will cost about ~0.025 ARION to anonymize 1000 ARION</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_7">
@@ -127,7 +127,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>This option is moderately fast and will cost about 0.05 ARION to anonymize 1000 TX</string>
+    <string>This option is moderately fast and will cost about 0.05 ARION to anonymize 1000 ARION</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_8">
